Fix footer spacing

--- a/showcase/showpad/src/shared/components/table/table.component.scss
+++ b/showcase/showpad/src/shared/components/table/table.component.scss
@@ -50,7 +50,6 @@ table {
 
 .pagination {
   display: flex;
-  justify-content: end;
   gap: 16px;
-  flex: 1;
+  margin-left: auto;
 }
